<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pokemonapp.MainActivity">
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete_all"

        app:showAsAction="never" />
    <item
        android:id="@+id/card"
        android:orderInCategory="100"
        android:title="@string/card"

        app:showAsAction="never" />
    <item
        android:id="@+id/dragon"
        android:orderInCategory="100"
        android:title="@string/dragon"

        app:showAsAction="never" />
    <item
        android:id="@+id/Special"
        android:orderInCategory="100"
        android:title="@string/special"
        app:showAsAction="never" />
    <item
        android:id="@+id/Pokémon"
        android:orderInCategory="100"
        android:title="@string/pok_mon"
        app:showAsAction="never" />
</menu>
