<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parentlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/pokemon"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_marginStart="30dp"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/subtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtype" />
            <TextView
                android:id="@+id/supertype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supertype" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>