<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="?android:selectableItemBackground"
        android:id="@+id/parentlayout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:padding="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/pokemon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/nama"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:paddingTop="25dp"
                android:text="@string/type"
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>